examples/typechecking/field_diagnostics.an
main () =
    tuple = (1, 1)

    _ = (ref ref tuple).first

    _ = mut tuple.first
    _ = mut tuple.missing

    imm_ref = ref tuple
    _ = mut imm_ref.first
    _ = mut imm_ref.missing

    var mut_tuple = (1, 1)

    _ = ref mut_tuple.missing
    _ = mut mut_tuple.missing

    mut_ref = mut mut_tuple

    _ = ref mut_ref.missing
    _ = mut mut_ref.missing

    _ = mut (mut ref tuple).first

// args: -e ast-t --no-color
// expected exit status: 1
// expected stdout:
// (main: fn Unit -> Unit) () =
//     (tuple: I32, I32) = 1 (,: fn I32 I32 -> I32, I32) 1
//     (_: ref I32) = (ref ref (tuple: I32, I32)).first (.*: fn (ref (ref I32)) {Copy (ref I32)} [Ptr Unit] -> ref I32) (copy_ref: Copy (ref I32))
//     (_: mut I32) = mut (tuple: I32, I32).first
//     (_: mut _) = mut (tuple: I32, I32).missing
//     (imm_ref: ref (I32, I32)) = ref (tuple: I32, I32)
//     (_: mut I32) = mut (imm_ref: ref (I32, I32)).first (.*: fn (ref I32) {Copy I32} [Ptr Unit] -> I32) (copy_i32: Copy I32)
//     (_: mut _) = mut (imm_ref: ref (I32, I32)).missing
//     mut (mut_tuple: I32, I32) = 1 (,: fn I32 I32 -> I32, I32) 1
//     (_: ref _) = ref (mut_tuple: I32, I32).missing
//     (_: mut _) = mut (mut_tuple: I32, I32).missing
//     (mut_ref: mut (I32, I32)) = mut (mut_tuple: I32, I32)
//     (_: ref _) = ref (mut_ref: mut (I32, I32)).missing
//     (_: mut _) = mut (mut_ref: mut (I32, I32)).missing
//     (_: mut (ref I32)) = mut (mut ref (tuple: I32, I32)).first (.*: fn (ref (ref I32)) {Copy (ref I32)} [Ptr Unit] -> ref I32) (copy_ref: Copy (ref I32))

// expected stderr:
// examples/typechecking/field_diagnostics.an:7:18
// 6 |     _ = mut tuple.first
// 7 |     _ = mut tuple.missing	// error: _, _ has no field named `missing`
//   |                  ^^^^^^^^
// 
// examples/typechecking/field_diagnostics.an:11:20
// 10 |     _ = mut imm_ref.first
// 11 |     _ = mut imm_ref.missing	// error: ref (_, _) has no field named `missing`
//    |                    ^^^^^^^^
// 
// examples/typechecking/field_diagnostics.an:15:22
// 15 |     _ = ref mut_tuple.missing	// error: _, _ has no field named `missing`
//    |                      ^^^^^^^^
// 16 |     _ = mut mut_tuple.missing
// 
// examples/typechecking/field_diagnostics.an:16:22
// 15 |     _ = ref mut_tuple.missing
// 16 |     _ = mut mut_tuple.missing	// error: _, _ has no field named `missing`
//    |                      ^^^^^^^^
// 
// examples/typechecking/field_diagnostics.an:20:20
// 20 |     _ = ref mut_ref.missing	// error: mut (_, _) has no field named `missing`
//    |                    ^^^^^^^^
// 21 |     _ = mut mut_ref.missing
// 
// examples/typechecking/field_diagnostics.an:21:20
// 20 |     _ = ref mut_ref.missing
// 21 |     _ = mut mut_ref.missing	// error: mut (_, _) has no field named `missing`
//    |                    ^^^^^^^^
// 
// Found 6 errors and 0 warnings

